# TuringAgents

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: code-comments-guidelines.mdc  python-pep8.mdc  readability-guidelines.mdc
.github/workflows/: ci.yml  llm_proxy_e2e.yml
k8s/: rabbitmq-admin-secret.example.yaml
lib/sdk/: README.md
scripts/: rabbit_setup.py  test_message_queue.sh
services/: README.md
services/Knowledge_Management/: config.py  main.py
services/Knowledge_Management/Extraction/: __init__.py  code_parser.py  code_processor.py  extractors.py
services/Knowledge_Management/FalkorDB/: database.py
services/Knowledge_Management/Helper-Functions/: api_falkordb.py  check_requirements.py  demo_falkordb.py  test_falkordb_helpers.py
services/Knowledge_Management/Model/: models.py
services/Knowledge_Management/Routes/: __init__.py  messages.py  uploads.py
services/composio_auth/: Dockerfile  README.md  docker-compose.yml  requirements.txt
services/composio_auth/app/: __init__.py  main.py
services/composio_auth/app/alembic/: env.py
services/composio_auth/app/alembic/versions/: 085404329cf0_create_tables.py
services/composio_auth/app/api/: __init__.py  deps.py  health.py
services/composio_auth/app/api/v1/: __init__.py  auth.py  composio.py  openai_keys.py
services/composio_auth/app/clients/: composio_client.py
services/composio_auth/app/core/: cache.py  config.py  database.py  exceptions.py  input_validation.py  rate_limiting.py  security.py
services/composio_auth/app/crud/: __init__.py  openai_key.py  user.py
services/composio_auth/app/dependencies/: __init__.py  auth.py
services/composio_auth/app/models/: __init__.py  composio_connection.py  openai_key.py  user.py
services/composio_auth/app/schemas/: __init__.py  auth.py  composio.py  openai_key.py  user.py
services/composio_auth/app/services/: __init__.py  composio_service.py  examples.py  openai_service.py  openai_validation_service.py  service_factory.py  user_key_utils.py
services/composio_auth/app/static/: index.html
services/composio_auth/app/static/css/: custom.css
services/composio_auth/app/static/js/: api.js  app.js  auth.js
services/context_engineering/: README.md  __main__.py  config.py  pyproject.toml  pytest.ini
services/context_engineering/docs/: context_compression.md  context_engineering_v2.md  deepval_summarization_tests.md  summarization_deterministric.md
services/context_engineering/libs/: __init__.py  api.py  config.py  conflict.py  context_compression.py  graph.py  lineage.py  metrics.py  models.py  mq.py  retrieval.py  router.py  summarize.py
services/context_engineering/scripts/: ingest.py  retrieve.py  summarize.py
services/context_engineering/tests/: conftest.py  test_context_compression.py  test_summarize.py  test_summarize_deepeval.py
services/evaluations/: Dockerfile  README.md  cli.py  evaluation_runner.py  pyproject.toml  serve_dashboard.py
services/evaluations/configs/: basic_eval.yaml  comprehensive_eval.yaml  sample_agent.yaml
services/evaluations/datasets/: context_compression_dataset.json  test_summary.json
services/evaluations/docs/: deepeval.md
services/evaluations/history/: results_20250904_191717.html
services/evaluations/scripts/: download_datasets.py
services/evaluations/src/evaluations/: __init__.py  cli.py
services/evaluations/src/evaluations/core/: __init__.py
services/evaluations/src/evaluations/utils/: __init__.py  logging.py
services/evaluations/tests/: __init__.py  conftest.py  test_basic.py  test_context_compression.py  test_summarization.py
services/gateway/: README.md
services/goals_decomp/workflow/: .gitignore  README.md  requirements.txt
services/goals_decomp/workflow/dag_builder/: __init__.py  create_interactive_hierarchical_dags.py  hierarchical_dag_builder.py
services/goals_decomp/workflow/data/: natural_user_queries.yaml
services/goals_decomp/workflow/goals_decomp_workflow/: goals_decomp.py  llm_batch_client.py  queryRouter.py
services/goals_decomp/workflow/prompts/: _core_capabilities.yaml  prompt_analyze_capabilities.yaml  prompt_query_router.yaml  system_prompt_2.yaml  system_prompt_refinement.yaml
services/llm_proxy/: IMPLEMENTATION_PLAN.md  README.md  RESEARCH.md  pyproject.toml
services/llm_proxy/compose/: docker-compose.override.yml
services/llm_proxy/config/: litellm_config.example.yaml
services/llm_proxy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  secret.yaml  service.yaml
services/llm_proxy/scripts/: load_test.sh  render_config.py  run_e2e.sh  smoke.sh
services/llm_proxy/tests/e2e/: __init__.py  test_health_and_chat.py
services/message_queue/: Dockerfile  README.md  pyproject.toml  supabase_schema.sql
services/message_queue/docs/: DEPLOYMENT_K8S.md  IMPLEMENTATION_PLAN.md  SECURITY_HARDENING.md  global_message_queue.md  grafana_dashboard.json  prometheus_alerts.yml
services/message_queue/k8s/: keda-scaledobject.yaml  worker-deployment.yaml
services/message_queue/libs/: __init__.py  audit.py  audit_pipeline.py  backpressure.py  config.py  constants.py  db.py  dedup.py  metrics.py  models.py  orm_models.py  poison.py  rabbit.py  rate_limit.py  response_payloads.py  retry.py  tracing.py  validation.py
services/message_queue/monitoring/: prometheus.yml
services/message_queue/scripts/: __init__.py  cleanup_dlq.py  cleanup_idempotency.py  coordinator.py  init_topology.py  load_test.py  peek_responses.py  producer.py  producer_batch.py  query_events.py  replay_dlq.py  seed_audit_event.py  worker.py
services/message_queue/supabase/: config.toml
services/message_queue/supabase/migrations/: 0001_audit_schema.sql  0002_idempotency.sql  0003_rls_policies.sql  0004_poison_counters.sql
services/message_queue/tests/: test_audit_batching.py  test_coordinator_forwarding.py  test_dlq_retention_replay.py  test_response_streaming.py  test_retry_backpressure_validation.py
uploads/: 0b16b6c7-b3ab-4e55-be05-929776cfe92b.txt  bd8a8f33-ddce-47a3-871d-ba1b6c1788a0.txt
