[project]
name = "context-engineering"
version = "0.1.0"
description = "Turing Agents - Context Engineering"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pydantic==2.8.2",
  "python-dotenv==1.0.1",
  "prometheus-client==0.20.0",
  "neo4j==5.25.0",
  "rank-bm25==0.2.2",
  "numpy==1.26.4",
  "google-generativeai>=0.7.2",
]

[project.optional-dependencies]
llm = [
  "openai>=1.40.0",
  "anthropic>=0.34.0",
]

[project.scripts]
ctx-v2 = "scripts.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["libs", "scripts"]
