[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluations"
version = "0.1.0"
description = "Comprehensive AI agent evaluation service with support for multiple benchmarks and interactive environments"
readme = "README.md"
license = {file = "../../LICENSE"}
authors = [
    {name = "Turing Agents Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.9"
dependencies = [
    # Core ML libraries
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "tokenizers>=0.14.0",
    
    # Agent evaluation frameworks
    "agentbench>=0.1.0",
    "swe-bench>=0.1.0",
    "webarena>=0.1.0",
    "toolbench>=0.1.0",
    
    # Interactive environments
    "gymnasium>=0.29.0",
    "miniwob-plusplus>=0.1.0",
    "alfworld>=0.3.0",
    "babyai>=1.1.0",
    
    # Web automation and interaction
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    
    # Code execution and analysis
    "docker>=6.1.0",
    "subprocess32>=3.5.4",
    "ast-tools>=0.1.0",
    "black>=23.7.0",
    "pylint>=3.0.0",
    
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    
    # Configuration and utilities
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    
    # Reporting and visualization
    "jinja2>=3.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "dash>=2.14.0",
    
    # Safety and content filtering
    "anthropic>=0.7.0",
    "openai>=1.0.0",
    "detoxify>=0.5.0",
    
    # Async and parallel processing
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "concurrent-futures>=3.1.1",
    
    # Logging and monitoring
    "structlog>=23.1.0",
    "wandb>=0.15.0",
    "mlflow>=2.8.0",
    
    # Database and storage
    "sqlite3",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-docker>=2.0.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
web = [
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "chromedriver-autoinstaller>=0.6.0",
    "webdriver-manager>=4.0.0",
]
code = [
    "docker>=6.1.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "code-eval>=0.1.0",
]
safety = [
    "detoxify>=0.5.0",
    "perspective-api>=0.1.0",
    "openai-moderation>=0.1.0",
]
multimodal = [
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "clip-by-openai>=1.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/turing-agents-monorepo"
Repository = "https://github.com/your-org/turing-agents-monorepo"
Documentation = "https://github.com/your-org/turing-agents-monorepo/tree/main/services/evaluations/docs"
"Bug Tracker" = "https://github.com/your-org/turing-agents-monorepo/issues"

[project.scripts]
evaluations = "evaluations.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evaluations = [
    "configs/*.yaml",
    "reporting/templates/*.html",
    "reporting/templates/*.css",
    "reporting/templates/*.js",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["evaluations"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "datasets.*",
    "transformers.*",
    "torch.*",
    "evaluate.*",
    "lm_eval.*",
    "human_eval.*",
    "anthropic.*",
    "wandb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--cov=evaluations",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
    "network: marks tests that require network access",
]

[tool.coverage.run]
source = ["src/evaluations"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]