[project]
name = "llm-proxy"
version = "0.1.0"
description = "Turing Agents - LiteLLM Proxy service"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "httpx==0.27.2",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.3",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

